--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,9 +72,10 @@ dependencies {
     implementation 'com.vk:android-sdk-api:3.5.0'
 
     //firebase
-    implementation platform('com.google.firebase:firebase-bom:29.1.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-database-ktx'
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+
+    implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.10")
 }
 
 detekt {
