ImageStorage.kt added and loading using camera and disk implementing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     //firebase
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-storage'
 
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.10")
 }
