--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         google()
+        jcenter()
     }
     dependencies {
         def nav_version = "2.4.1"
@@ -9,14 +10,12 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.10'
     }
 }
-
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
     id 'io.gitlab.arturbosch.detekt' version '1.18.1'
 }
-
 
 task clean(type: Delete) {
     delete rootProject.buildDir
