--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,13 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.room:room-common:2.4.2'
-    implementation 'androidx.room:room-ktx:2.4.2'
+
+    def room = "2.4.2"
+    implementation "androidx.room:room-runtime:$room"
+    implementation "androidx.room:room-ktx:$room"
+    kapt "androidx.room:room-compiler:$room"
+    implementation "androidx.room:room-common:$room"
+
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
     def retrofit = "2.9.0"
