--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,10 +90,13 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.6.10")
     //for calendar
     implementation 'com.applandeo:material-calendar-view:1.7.0'
+
     //dagger
     def dagger = "2.41"
     implementation "com.google.dagger:dagger:${dagger}"
     kapt "com.google.dagger:dagger-compiler:${dagger}"
+    implementation "com.google.dagger:dagger-android-support:${dagger}"
+    kapt "com.google.dagger:dagger-android-processor:${dagger}"
 }
 
 detekt {
