--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,17 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+            kapt {
+                arguments {
+                    arg("room.schemaLocation", "$projectDir/schemas".toString())
+                }
+            }
+        }
     }
 
     buildFeatures {
